Image/from_oss/lesson4_1_debug.txt
zhj@thinkpad-vmware:~$ ls
Desktop           hello        Music               opencv.zip  Videos
Documents         hello.c      opencv              Pictures
Downloads         Linux        opencv_contrib      Public
face_recognition  Linux_Class  opencv_contrib.zip  Templates
zhj@thinkpad-vmware:~$ cd Linux
zhj@thinkpad-vmware:~/Linux$ ls
ex3_1  ex3_3  ex3_4  homework  mooc
zhj@thinkpad-vmware:~/Linux$ vi lesson4_1.c
zhj@thinkpad-vmware:~/Linux$ gcc lesson4_1.c -o lesson4_1
lesson4_1.c: In function ‘main’:
lesson4_1.c:13:38: error: ‘S_TRWXU’ undeclared (first use in this function); did you mean ‘S_IRWXU’?
  if((fd=open("test.c",O_RDWR|O_CREAT,S_TRWXU)) == -1)
                                      ^~~~~~~
                                      S_IRWXU
lesson4_1.c:13:38: note: each undeclared identifier is reported only once for each function it appears in
lesson4_1.c:20:6: error: ‘res’ undeclared (first use in this function)
  if((res = write(fd, STRING, LEN)) == -1)
      ^~~
lesson4_1.c:20:12: warning: implicit declaration of function ‘write’; did you mean ‘fwrite’? [-Wimplicit-function-declaration]
  if((res = write(fd, STRING, LEN)) == -1)
            ^~~~~
            fwrite
lesson4_1.c:40:9: warning: too many arguments for format [-Wformat-extra-args]
  printf("File size: ",statbuf.st_size);
         ^~~~~~~~~~~~~
lesson4_1.c:42:2: warning: implicit declaration of function ‘lseek’; did you mean ‘fseek’? [-Wimplicit-function-declaration]
  lseek(fd, 0, SEEK_SET);
  ^~~~~
  fseek
lesson4_1.c:44:5: warning: implicit declaration of function ‘read’; did you mean ‘fread’? [-Wimplicit-function-declaration]
  if(read(fd, &buf, BUFSIZE) == -1)
     ^~~~
     fread
lesson4_1.c:44:20: error: ‘BUFSIZE’ undeclared (first use in this function); did you mean ‘BUFSIZ’?
  if(read(fd, &buf, BUFSIZE) == -1)
                    ^~~~~~~
                    BUFSIZ
lesson4_1.c:50:2: warning: implicit declaration of function ‘close’; did you mean ‘pclose’? [-Wimplicit-function-declaration]
  close(fd);
  ^~~~~
  pclose
zhj@thinkpad-vmware:~/Linux$ vi lesson4_1.c
zhj@thinkpad-vmware:~/Linux$ gcc lesson4_1.c -o lesson4_1
lesson4_1.c: In function ‘main’:
lesson4_1.c:38:9: warning: too many arguments for format [-Wformat-extra-args]
  printf("File size: ",statbuf.st_size);
         ^~~~~~~~~~~~~
zhj@thinkpad-vmware:~/Linux$ vi lesson4_1.c
zhj@thinkpad-vmware:~/Linux$ gcc lesson4_1.c -o lesson4_1
lesson4_1.c: In function ‘main’:
lesson4_1.c:38:22: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘__off_t {aka long int}’ [-Wformat=]
  printf("File size: %d\n",statbuf.st_size);
                     ~^    ~~~~~~~~~~~~~~~
                     %ld
zhj@thinkpad-vmware:~/Linux$ vi lesson4_1.c
zhj@thinkpad-vmware:~/Linux$ gcc lesson4_1.c -o lesson4_1
zhj@thinkpad-vmware:~/Linux$ ls
ex3_1  ex3_3  ex3_4  homework  lesson4_1  lesson4_1.c  mooc
zhj@thinkpad-vmware:~/Linux$ cat lesson4_1.c 
#include <sys/types.h>
#include <sys/stat.h>
#include <fcntl.h>
#include <unistd.h>
#include <stdio.h>
#define LEN 20
#define STRING "write to the file!"
#define BUFSIZE 10

int main(){
	int fd;
	struct stat statbuf;
	char buf[LEN]="\0";
	int res;
	// Open file
	if((fd=open("test.c",O_RDWR|O_CREAT,S_IRWXU)) == -1){
		perror("Fail to open:");
		return -1;
	}
	printf("Open file successful\n");
	// Write to file
	if((res = write(fd, STRING, LEN)) == -1){
		perror("Fail to write:");
		return -2;
	}
	else if(res == 0){
		perror("Write data is empty");
		return -3;
	}
	else{
		printf("Write data successful\n");
	}
	// Get file size
	if(fstat(fd,&statbuf) == -1){
		perror("Fail to call fstat()");
		return -4;
	}
	printf("File size: %ld\n",statbuf.st_size);
	// Change offset
	lseek(fd, 0, SEEK_SET);
	// Read file
	if(read(fd, buf, BUFSIZE) == -1){
		perror("Fail to read");
		return 0;
	}
	printf("File data: %s\n", buf);
	close(fd);
	return 0;
}
zhj@thinkpad-vmware:~/Linux$ ls
ex3_1  ex3_3  ex3_4  homework  lesson4_1  lesson4_1.c  mooc
zhj@thinkpad-vmware:~/Linux$ ./lesson4_1 
Open file successful
Write data successful
File size: 20
File data: write to t
zhj@thinkpad-vmware:~/Linux$ ls -l
total 44
drwxr-xr-x 2 zhj zhj  4096 Feb 20 16:40 ex3_1
drwxr-xr-x 2 zhj zhj  4096 Feb 20 19:41 ex3_3
drwxr-xr-x 3 zhj zhj  4096 Feb 20 20:42 ex3_4
drwxr-xr-x 2 zhj zhj  4096 Feb 18 10:49 homework
-rwxr-xr-x 1 zhj zhj 12856 Feb 20 22:25 lesson4_1
-rw-r--r-- 1 zhj zhj   951 Feb 20 22:25 lesson4_1.c
drwxr-xr-x 4 zhj zhj  4096 Feb 12 15:11 mooc
-rwx------ 1 zhj zhj    20 Feb 20 22:26 test.c
zhj@thinkpad-vmware:~/Linux$ rm test.c 
zhj@thinkpad-vmware:~/Linux$ vi lesson4_1.c
zhj@thinkpad-vmware:~/Linux$ gcc lesson4_1.c -o lesson4_1
zhj@thinkpad-vmware:~/Linux$ ls -l
total 40
drwxr-xr-x 2 zhj zhj  4096 Feb 20 16:40 ex3_1
drwxr-xr-x 2 zhj zhj  4096 Feb 20 19:41 ex3_3
drwxr-xr-x 3 zhj zhj  4096 Feb 20 20:42 ex3_4
drwxr-xr-x 2 zhj zhj  4096 Feb 18 10:49 homework
-rwxr-xr-x 1 zhj zhj 12856 Feb 20 22:30 lesson4_1
-rw-r--r-- 1 zhj zhj   974 Feb 20 22:30 lesson4_1.c
drwxr-xr-x 4 zhj zhj  4096 Feb 12 15:11 mooc
zhj@thinkpad-vmware:~/Linux$ ./lesson4_1 
Open file successful
Write data successful
File size: 18
File data: write to t
zhj@thinkpad-vmware:~/Linux$ ls -l
total 44
drwxr-xr-x 2 zhj zhj  4096 Feb 20 16:40 ex3_1
drwxr-xr-x 2 zhj zhj  4096 Feb 20 19:41 ex3_3
drwxr-xr-x 3 zhj zhj  4096 Feb 20 20:42 ex3_4
drwxr-xr-x 2 zhj zhj  4096 Feb 18 10:49 homework
-rwxr-xr-x 1 zhj zhj 12856 Feb 20 22:30 lesson4_1
-rw-r--r-- 1 zhj zhj   974 Feb 20 22:30 lesson4_1.c
drwxr-xr-x 4 zhj zhj  4096 Feb 12 15:11 mooc
-rw------- 1 zhj zhj    18 Feb 20 22:30 test.c
zhj@thinkpad-vmware:~/Linux$ vi lesson4_1.c 
zhj@thinkpad-vmware:~/Linux$ rm test.c 
zhj@thinkpad-vmware:~/Linux$ gcc lesson4_1.c -o lesson4_1
zhj@thinkpad-vmware:~/Linux$ ./lesson4_1 
Open file successful
Write data successful
File size: 18
File data: write to t
zhj@thinkpad-vmware:~/Linux$ echo "****** test: IF I DO NOT CHANGE OFFSET : ******"
****** test: IF I DO NOT CHANGE OFFSET : ******
zhj@thinkpad-vmware:~/Linux$ vi lesson4_1.c 
zhj@thinkpad-vmware:~/Linux$ sed -n 34p lesson4_1.c 
//	lseek(fd, 0, SEEK_SET);
zhj@thinkpad-vmware:~/Linux$ rm test.c 
zhj@thinkpad-vmware:~/Linux$ gcc lesson4_1.c -o lesson4_1
zhj@thinkpad-vmware:~/Linux$ ./lesson4_1 
Open file successful
Write data successful
File size: 18
File data: 
zhj@thinkpad-vmware:~/Linux$ "****** test result: lseek() is Working ! ******"
****** test result: lseek() is Working ! ******: command not found
zhj@thinkpad-vmware:~/Linux$ vi lesson4_1.c 
zhj@thinkpad-vmware:~/Linux$ rm test.c 
zhj@thinkpad-vmware:~/Linux$ gcc lesson4_1. -o lesson4_1
gcc: error: lesson4_1.: No such file or directory
gcc: fatal error: no input files
compilation terminated.
zhj@thinkpad-vmware:~/Linux$ gcc lesson4_1.c -o lesson4_1
zhj@thinkpad-vmware:~/Linux$ ls -l
total 36
drwxr-xr-x 2 zhj zhj 4096 Feb 20 16:40 ex3_1
drwxr-xr-x 2 zhj zhj 4096 Feb 20 19:41 ex3_3
drwxr-xr-x 3 zhj zhj 4096 Feb 20 20:42 ex3_4
drwxr-xr-x 2 zhj zhj 4096 Feb 18 10:49 homework
-rwxr-xr-x 1 zhj zhj 8760 Feb 20 22:41 lesson4_1
-rw-r--r-- 1 zhj zhj  893 Feb 20 22:41 lesson4_1.c
drwxr-xr-x 4 zhj zhj 4096 Feb 12 15:11 mooc
zhj@thinkpad-vmware:~/Linux$ ./lesson4_1 
Open file successful
Write data successful
File size: 18
File data: write to t
zhj@thinkpad-vmware:~/Linux$ ls -l
total 40
drwxr-xr-x 2 zhj zhj 4096 Feb 20 16:40 ex3_1
drwxr-xr-x 2 zhj zhj 4096 Feb 20 19:41 ex3_3
drwxr-xr-x 3 zhj zhj 4096 Feb 20 20:42 ex3_4
drwxr-xr-x 2 zhj zhj 4096 Feb 18 10:49 homework
-rwxr-xr-x 1 zhj zhj 8760 Feb 20 22:41 lesson4_1
-rw-r--r-- 1 zhj zhj  893 Feb 20 22:41 lesson4_1.c
drwxr-xr-x 4 zhj zhj 4096 Feb 12 15:11 mooc
-rw------- 1 zhj zhj   18 Feb 20 22:42 test.c
zhj@thinkpad-vmware:~/Linux$ echo "lesson4_1 complete at" $(date)
lesson4_1 complete at Thu Feb 20 22:45:09 CST 2020
zhj@thinkpad-vmware:~/Linux$ 
